fixed uri overflow in type pages

--- a/tpl/type/css/type.less
+++ b/tpl/type/css/type.less
@@ -132,7 +132,9 @@
 					border-radius: 4px;
 
 					.uri-text a{
-						font-size:1vw;
+						@media screen and (min-width: 1680px){
+							font-size:90%;
+						}
 						@media screen and (max-width: 976px){
 							font-size:1.4vw;
 						}
